# cose

./: ChangeLog  Makefile.am  MergingCelestia  README  aclocal.m4  config.h.in  configure  configure.in
doc/: geekbind-test.celx
locale/: Makefile.am
merge/: Makefile.am  checkout-svn.sh  commit-svn.sh  merge-master.tcl  merge.cfg
po/: POTFILES.in  ar.gmo  ar.po  bg.gmo  bg.po  cose.pot  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  lt.gmo  lt.po  lv.gmo  lv.po  nl.gmo  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po  ru.gmo  ru.po  sv.gmo  sv.po  (+4 more)
src/: Makefile.am
src/cel3ds/: Makefile.am
src/celengine/: Makefile.am  body.cpp  overlay.h
src/celephem/: Makefile.am
src/celestia/: Makefile.am  celestiacore.cpp  celestiacore.h  celx.cpp
src/celmath/: Makefile.am
src/celmodel/: Makefile.am
src/celtxf/: Makefile.am
src/celutil/: Makefile.am  utf8.cpp  utf8.h
src/cgame/: Makefile.am  agarmain.cpp  cgame.cpp  cgame.h  configfile.cpp  configfile.h  gamecore.cpp  gamecore.h  geekbind.cpp  geekbind.h  geekconsole.cpp  geekconsole.h  gkey.c  gkey.h  stdcelinter.cpp  ui.h  ui_context.cpp  ui_main.cpp  ui_theme.cpp  ui_theme.h  videocapture.cpp  videocapture.h
src/sound/: Makefile.am  mixer.cpp  mixer.h  samplemanager.cpp  samplemanager.h  snd_local.h
